--- a/ControlVehicular/ControlVehicular.csproj
+++ b/ControlVehicular/ControlVehicular.csproj
@@ -169,6 +169,8 @@
     <Content Include="Content\ie8.css" />
     <Content Include="Content\ie9.css" />
     <Content Include="Content\main.css" />
+    <Content Include="Content\nav-expand.png" />
+    <Content Include="Content\nicemodal.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -225,6 +227,7 @@
     <Content Include="sass\libs\_skel.scss" />
     <Content Include="sass\libs\_vars.scss" />
     <Content Include="sass\main.scss" />
+    <Content Include="sass\components\_map.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-1.11.3.intellisense.js" />
     <Content Include="Scripts\ie\html5shiv.js" />
