Conductor + Layout con solo carnita

--- a/Modelo/app.config
+++ b/Modelo/app.config
@@ -7,4 +7,11 @@
             connectionString="Data Source=USER\SQLEXPRESS;Initial Catalog=ControlVehicular;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
+  <connectionStrings>
+    <add name="Modelo.Properties.Settings.ControlVehicularConnectionString1"
+        connectionString="Data Source=DANEL-PC;Initial Catalog=ControlVehicular;Persist Security Info=True;User ID=SA;Password=***********"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
+  
 </configuration>
