--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -49,6 +49,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Conexion.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\ConjuntoConductor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -56,9 +57,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Modelo\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Database\Conexion.dbml">
