--- a/Modelo/Properties/Settings.settings
+++ b/Modelo/Properties/Settings.settings
@@ -10,5 +10,9 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=USER\SQLEXPRESS;Initial Catalog=ControlVehicular;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="ControlVehicularConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)" />
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
