--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -49,6 +49,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Conexion.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\ConjuntoEmpresa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -56,15 +57,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Modelo\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Database\Conexion.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>Conexion.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Database\Conexion.dbml.layout">
+      <DependentUpon>Conexion.dbml</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -73,11 +75,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Database\Conexion.dbml.layout">
-      <DependentUpon>Conexion.dbml</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Database\Script.txt" />
