--- a/Modelo/app.config
+++ b/Modelo/app.config
@@ -4,7 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="Modelo.Properties.Settings.ControlVehicularConnectionString"
-            connectionString="Data Source=USER\SQLEXPRESS;Initial Catalog=ControlVehicular;Integrated Security=True"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ControlVehicular;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Modelo.Properties.Settings.ControlVehicularConnectionString1"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ControlVehicular;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
