--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -51,6 +51,7 @@
     </Compile>
     <Compile Include="Modelo\ConjuntoEmpresa.cs" />
     <Compile Include="Modelo\ConjuntoConductor.cs" />
+    <Compile Include="Modelo\ConjuntoSeguro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
