--- a/Modelo/app.config
+++ b/Modelo/app.config
@@ -11,8 +11,8 @@
             providerName="System.Data.SqlClient" />
     </connectionStrings>
   <connectionStrings>
-    <add name="Modelo.Properties.Settings.ControlVehicularConnectionString1"
-        connectionString="Data Source=DANEL-PC;Initial Catalog=ControlVehicular;Persist Security Info=True;User ID=SA;Password=***********"
+    <add name="Modelo.Properties.Settings.ControlVehicularConnectionString2"
+        connectionString="Data Source=DANEL-PC;Initial Catalog=ControlVehicular;Persist Security Info=True;User ID=SA;Password=123456"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
   
