--- a/Modelo/Properties/Settings.settings
+++ b/Modelo/Properties/Settings.settings
@@ -25,10 +25,10 @@
     <Setting Name="ControlVehicularConnectionString2" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=USER\SQLEXPRESS;Initial Catalog=ControlVehicular;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DANEL-PC;Initial Catalog=ControlVehicular;Persist Security Info=True;User ID=SA;Password=123456&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=USER\SQLEXPRESS;Initial Catalog=ControlVehicular;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=DANEL-PC;Initial Catalog=ControlVehicular;Persist Security Info=True;User ID=SA;Password=123456</Value>
     </Setting>
   </Settings>
 </SettingsFile>
