--- a/ControlVehicular/ControlVehicular.csproj
+++ b/ControlVehicular/ControlVehicular.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\ConductorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SegurosController.cs" />
+    <Compile Include="Controllers\UnidadController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -238,6 +239,7 @@
     <Content Include="Scripts\Conductor\ScriptConductor.js" />
     <Content Include="Scripts\ie\html5shiv.js" />
     <Content Include="Scripts\ie\respond.min.js" />
+    <Content Include="Scripts\unidad.js" />
     <Content Include="Scripts\jquery-1.11.3.js" />
     <Content Include="Scripts\jquery-1.11.3.min.js" />
     <Content Include="Scripts\jquery-1.11.3.min.map" />
@@ -276,6 +278,9 @@
     <Content Include="Views\Seguros\Index.cshtml" />
     <Content Include="Views\Empresa\ModalAgregarEmpresa.cshtml" />
     <Content Include="Views\Empresa\ModalEditarEmpresa.cshtml" />
+    <Content Include="Views\Unidad\Index.cshtml" />
+    <Content Include="Views\Unidad\ModalAgregarUnidad.cshtml" />
+    <Content Include="Views\Unidad\ModalEditarUnidad.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
