--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Modelo\ConjuntoEmpresa.cs" />
     <Compile Include="Modelo\ConjuntoConductor.cs" />
     <Compile Include="Modelo\ConjuntoSeguro.cs" />
+    <Compile Include="Modelo\ConjuntoUnidad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
