--- a/ControlVehicular/ControlVehicular.csproj
+++ b/ControlVehicular/ControlVehicular.csproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Conductor.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\ie8.css" />
     <Content Include="Content\ie9.css" />
@@ -272,13 +273,14 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Empresa\Index.cshtml" />
-    <Content Include="Views\Conductor\EmpresaConductor.cshtml" />
     <Content Include="Views\Seguros\Index.cshtml" />
     <Content Include="Views\Empresa\ModalAgregarEmpresa.cshtml" />
     <Content Include="Views\Empresa\ModalEditarEmpresa.cshtml" />
+    <Content Include="Views\Conductor\EmpresaConductor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Storage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
