--- a/Modelo/Modelo.csproj
+++ b/Modelo/Modelo.csproj
@@ -49,6 +49,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Conexion.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\ConjuntoClienteHijo.cs" />
     <Compile Include="Modelo\ConjuntoEmpresa.cs" />
     <Compile Include="Modelo\ConjuntoConductor.cs" />
     <Compile Include="Modelo\ConjuntoSeguro.cs" />
